--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<finalName>gamutkart</finalName>
 		<plugins>
 		<plugin>
-			<groupId>org.apache.maven.plugins</groupLd>
+			<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.1</version>
 			</plugin>
